--- a/styles/style.css
+++ b/styles/style.css
@@ -8,5 +8,13 @@
 .encabezado {
    display: flex;
    justify-content: center;
-    background-color: var(--color-principal);
+   align-items: center;
+   padding: 20px 0px;
+   background-color: var(--color-principal);
+   box-shadow: 0px 7px 0.9px 0px rgba(0, 0, 0, 0.25);
+}
+
+.encabezado img {
+    width: 315px;
+    height: auto;
 }
