--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 :root {
     --color-principal: #5D04D9;
     --color-secundario : #0331BC;
+    --fuente: "IBM Plex Mono", monospace;
 }
 
 /*Encabezado*/
@@ -17,4 +20,64 @@
 .encabezado img {
     width: 315px;
     height: auto;
+}
+
+/*Main*/
+
+
+
+.producto{
+    width: 196px;
+    height: 258px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    gap: 10px;
+    background-color: var(--color-principal);
+    border-radius: 10px;
+    border: 3px solid #000;
+    box-shadow: -5px 6px 3.3px 0px rgba(0, 0, 0, 0.25);
+}
+
+.producto h2, .info {
+    align-self: flex-start;
+}
+
+.imagen-producto{
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    border: 3px solid #000;
+}
+
+.nombre-producto{
+    color: #FFF;
+    font-family: var(--fuente);
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal
+}
+
+.info{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.precio {
+    color: #FFF;
+    font-family: "IBM Plex Mono";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.icono-eliminar{
+    height: 24px;
+    width: 24px;
 }
