--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 :root {
     --color-principal: #5D04D9;
     --color-secundario : #0331BC;
-    --fuente: "IBM Plex Mono", monospace;
+    --fuente-texto: "IBM Plex Mono", monospace;
+    --fuente-titulo: "Press Start 2P", system-ui;
 }
 
 /*Encabezado*/
@@ -24,7 +26,36 @@
 
 /*Main*/
 
+main{
+    display: flex;
+    flex-direction: row;
+    width: 50vh ;
+    height: 50vh ;
+    margin: 20px;
+}
 
+.seccion-productos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    gap: 40px;
+}
+
+.titulo{
+    color: #000;
+    text-align: center;
+    font-family: var(--fuente-titulo);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.lista-productos{
+    background: #FFF;
+    box-shadow: -12px 10px 5.8px 0px rgba(0, 0, 0, 0.25);
+}
 
 .producto{
     width: 196px;
@@ -54,7 +85,7 @@
 
 .nombre-producto{
     color: #FFF;
-    font-family: var(--fuente);
+    font-family: var(--fuente-texto);
     font-size: 15px;
     font-style: normal;
     font-weight: 400;
