--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,11 @@ main{
 }
 
 .lista-productos{
+    display: flex;
+    padding-bottom: 15px;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
     background: #FFF;
     box-shadow: -12px 10px 5.8px 0px rgba(0, 0, 0, 0.25);
 }
