--- a/styles/style.css
+++ b/styles/style.css
@@ -29,10 +29,11 @@
 main{
     display: flex;
     flex-direction: row;
-    width: 50vh ;
-    height: 50vh ;
     margin: 20px;
+    gap: 70px;
 }
+
+/*Mostrar Productos*/
 
 .seccion-productos{
     display: flex;
@@ -57,6 +58,7 @@ main{
     padding-bottom: 15px;
     justify-content: center;
     align-items: flex-start;
+    flex-wrap: wrap;
     gap: 10px;
     background: #FFF;
     box-shadow: -12px 10px 5.8px 0px rgba(0, 0, 0, 0.25);
@@ -116,4 +118,41 @@ main{
 .icono-eliminar{
     height: 24px;
     width: 24px;
+}
+
+/*Form*/
+
+.agregar-productos{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 40px;
+}
+
+.agregar-productos h1 {
+    align-self: center;
+}
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.campo-completo{
+    width: 90%;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: var(--color-secundario);
+    font-family: var(--fuente-texto);
+    padding: 10px;
+}
+
+.campo-completo::placeholder{
+    color: var(--color-secundario);
+    font-family: var(--fuente-texto);
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
