--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@ main{
     align-items: center;
     padding: 40px;
     gap: 40px;
+    max-width: 50%;
 }
 
 .titulo{
@@ -55,7 +56,7 @@ main{
 
 .lista-productos{
     display: flex;
-    padding-bottom: 15px;
+    padding-bottom: 40px;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
@@ -71,12 +72,13 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 10px;  
     gap: 10px;
     background-color: var(--color-principal);
     border-radius: 10px;
     border: 3px solid #000;
     box-shadow: -5px 6px 3.3px 0px rgba(0, 0, 0, 0.25);
+    margin-bottom: 70px;
 }
 
 .producto h2, .info {
@@ -127,6 +129,7 @@ main{
     flex-direction: column;
     gap: 40px;
     padding: 40px;
+    max-width: 50%;
 }
 
 .agregar-productos h1 {
@@ -140,7 +143,7 @@ main{
 }
 
 .campo-completo{
-    width: 90%;
+    width: 85%;
     border-radius: 20px;
     border-style: solid;
     border-color: var(--color-secundario);
