--- a/styles/style.css
+++ b/styles/style.css
@@ -56,13 +56,16 @@ main{
 
 .lista-productos{
     display: flex;
-    padding-bottom: 40px;
+    padding: 20px;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 10px;
     background: #FFF;
     box-shadow: -12px 10px 5.8px 0px rgba(0, 0, 0, 0.25);
+    max-height: 500px; /* Establece una altura máxima para el contenedor */
+    overflow-y: auto; /* Permite el desplazamiento vertical */
+    overflow-x: hidden; /* Evita el desplazamiento horizontal */
 }
 
 .producto{
@@ -70,7 +73,7 @@ main{
     height: 258px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     padding: 10px;  
     gap: 10px;
@@ -149,6 +152,7 @@ main{
     border-color: var(--color-secundario);
     font-family: var(--fuente-texto);
     padding: 10px;
+    font-weight: 600;
 }
 
 .campo-completo::placeholder{
