--- a/styles/style.css
+++ b/styles/style.css
@@ -29,8 +29,10 @@
 main{
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     margin: 20px;
     gap: 70px;
+    margin-block: 60px;
 }
 
 /*Mostrar Productos*/
@@ -63,10 +65,26 @@ main{
     gap: 10px;
     background: #FFF;
     box-shadow: -12px 10px 5.8px 0px rgba(0, 0, 0, 0.25);
-    max-height: 500px; /* Establece una altura máxima para el contenedor */
-    overflow-y: auto; /* Permite el desplazamiento vertical */
-    overflow-x: hidden; /* Evita el desplazamiento horizontal */
+    max-height: 700px; 
+    overflow-y: auto; 
+    overflow-x: hidden; 
 }
+
+/* Custom scrollbar for WebKit browsers */
+.lista-productos::-webkit-scrollbar {
+    width: 10px; /* Ancho de la barra de desplazamiento */
+}
+
+.lista-productos::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Color del track de la barra de desplazamiento */
+    border-radius: 10px; /* Bordes redondeados del track */
+}
+
+.lista-productos::-webkit-scrollbar-thumb {
+    background: #D6D6D6; /* Color del pulgar de la barra de desplazamiento */
+    border-radius: 10px; /* Bordes redondeados del pulgar */
+}
+
 
 .producto{
     width: 196px;
