--- a/styles/style.css
+++ b/styles/style.css
@@ -212,5 +212,39 @@ main{
 }
 
 .b-limpiar{
-    color: var(--color-secundario);
+    color: var(--color-secundario); 
+}
+
+/*Footer*/
+.pieDePagina{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-principal);
+    box-shadow: 0px -10px 9.5px 0px rgba(0, 0, 0, 0.25);
+    padding: 64px;
+    gap: 15px;
+}
+
+.texto {
+    color: #FFF;
+    text-align: center;
+    font-family: var(--fuente-texto);
+}
+
+.t-principal{
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px; /* 100% */
+    text-transform: uppercase;
+}
+
+.t-secundario{
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 200;
+    line-height: 14px;
+    text-transform: uppercase;
 }
