--- a/front/src/styles/style.css
+++ b/front/src/styles/style.css
@@ -121,8 +121,10 @@ main{
 }
 
 .imagen-producto{
-    width: 100%;
-    max-height: 190px;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
     border-radius: 10px;
     border: 3px solid #000;
 }
