--- a/front/src/styles/style.css
+++ b/front/src/styles/style.css
@@ -122,7 +122,7 @@ main{
 
 .imagen-producto{
     max-width: 100%;
-    max-height: 100%;
+    max-height: 170px;
     width: auto;
     height: auto;
     border-radius: 10px;
